--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,11 @@ html {
 	background: radial-gradient(center, ellipse cover, #555a5f 0%,#1c1e20 100%);
 }
 
+iframe {
+  margin-top: -80px;
+  margin-left: -80px;
+}
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -143,7 +148,7 @@ html {
 }
 
 #reveal ol {
-	list-style: decimal;
+  list-style-type: lower-alpha;
 	list-style-position: inside;
 }
 
@@ -231,7 +236,6 @@ html {
 #reveal section img {
 	margin: 30px 0 0 0;
 	background: rgba(255,255,255,0.12);
-	border: 4px solid #eee;
 	
 	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 	   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
